tests/golden/error/type_mismatch.tg
// This file has a type error - adding string to nat
fn main() -> Nat {
    42 + "hello"
}
